--- a/MS549 Week 5 Mark Montenieri.vcxproj
+++ b/MS549 Week 5 Mark Montenieri.vcxproj
@@ -18,6 +18,17 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataSets\num10.dat" />
+    <Content Include="DataSets\num100.dat" />
+    <Content Include="DataSets\num1000.dat" />
+    <Content Include="DataSets\num10000.dat" />
+    <Content Include="DataSets\num100000.dat" />
+    <Content Include="DataSets\num1000000.dat" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{E3C38646-04CB-4658-9C04-C4496989E435}</ProjectGuid>
@@ -153,9 +164,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="MS549_Week_5_Mark_Montenieri.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
